IDEX-115: packaging Tomcat with SDK; siplifying build procedure