@@ -28,7 +28,7 @@
         <version>3.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>codenvy-ide-client</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <!--version>2.0-SNAPSHOT</version -->
     <name>Codenvy :: Client</name>
 
@@ -233,18 +233,6 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <configuration>
-                            <extraJvmArgs>-Xss512m -Xmx2048m -XX:MaxPermSize=1024m</extraJvmArgs>
-                        </configuration>
-                        <goals>
-                            <goal>compile</goal>
-                            <goal>test</goal>
-                            <goal>i18n</goal>
-                        </goals>
-                    </execution>
-                </executions>
                 <!-- Plugin configuration. There are many available options, see gwt-maven-plugin documentation at codehaus.org -->
                 <configuration>
                     <module>com.codenvy.ide.IDE</module>
@@ -292,31 +280,5 @@
             </plugin>
         </plugins>
     </build>
-
-	<profiles>
-		<profile>
-			<id>ext-runtime</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<dependencies>
-				<dependency>
-		            <groupId>com.codenvy.ide</groupId>
-		            <artifactId>codenvy-ext-extensions-runtime</artifactId>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-		               <groupId>org.codehaus.mojo</groupId>
-		               <artifactId>gwt-maven-plugin</artifactId>
-		               <configuration>
-		                   <module>com.codenvy.ide.IDEExtensionsLauncher</module>
-		               </configuration>
-		           </plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 
 </project>
